--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Telios WebDev",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "connect-mongo": "^0.8.2",
     "ejs": "^2.3.4",
